feat(httphandler): implement task handlers
