# internal/http/server/routes.go
@@ -7,4 +7,11 @@ import (
 
 func addRoutes(e *echo.Group, h *handler.Handler) {
 	e.GET("/health", h.HealthCheck())
+
+	// Task
+	task := e.Group("/tasks")
+	task.GET("", h.ListTasks())
+	task.POST("", h.CreateTask())
+	task.PUT("/:taskId", h.UpdateTask())
+	task.DELETE("/:taskId", h.DeleteTask())
 }
